--- a/media/css/main.scss
+++ b/media/css/main.scss
@@ -21,12 +21,12 @@ div.container {
 
 section {
   h1 {
-    padding: 100px;
-    font-size: 80px;
+    padding: 100px 0 40px;
+    font-size: 70px;
+    text-align: left;
     font-weight: 100;
     color: #fff;
     font-family: $lato;
-    text-align: center;
     text-shadow: #2B2B2B 1px 1px 0;
 
     span {
@@ -41,9 +41,10 @@ section {
     color: #fff;
     font-family: $lato;
     font-weight: 100;
-    text-align: center;
+    text-align: left;
     font-size: 25px;
     color: #97A1C2;
+    margin-bottom: 12px;
 
     a {
       color: #fff;
